# seabee

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .mega-linter.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  sample_config.toml
.github/workflows/: build-containers.yml  mega-linter.yml  pages.yml  rust-clippy.yml  rust-lint.yml  rustfmt.yml  test-build.yml
bpf/: Cargo.toml  build.rs
bpf/include/: constants.h  logging.h  logging_types.h  seabee_maps.h  seabee_utils.h  shared_rust_types.h  vmlinux.h  vmlinux_6_0_18.h  vmlinux_6_11_4.h
bpf/src/: common.rs  lib.rs
bpf/src/kernel_api/: label_file.bpf.c  label_maps.bpf.c  label_task.bpf.c  mod.rs
bpf/src/logging/: mod.rs
bpf/src/seabee/: mod.rs  seabee.bpf.c  seabee_log.h
bpf/src/tests/: mod.rs  test_tool.bpf.c  write_user.bpf.c
ci/: Dockerfile  fedora-41.Dockerfile  fedora-42.Dockerfile  rocky-9.Dockerfile  run_megalinter.sh  ubuntu-jammy.Dockerfile  ubuntu-noble.Dockerfile
docs/: .gitignore  Doxyfile  Makefile  doxygen.md  mkdocs.yml
docs/docs/: architecture.md  capabilities.md  ci.md  config.md  crypto.md  folder_map.md  getting_started.md  implementation.md  index.md  logging.md  policy.md  policy_tutorial.md  requirements.md  seabeectl.md  testing.md  threat_model.md  troubleshooting.md  tutorial.md
docs/docs/_static/css/: class.css
docs/docs/assets/asciinema/: seabee-demo.cast
docs/overrides/: main.html
docs/tools/: bpf_helper_info.py  find_ebpf_hooks.py  requirements.txt  seabee-autocast-demo.yaml
install/: install.sh  journald.service  stdout.service  uninstall.sh
sample_policy/: kubearmor-systemd.yaml
scripts/: update_dependencies.sh  update_root_dependencies.sh  update_test_dependencies.sh
seabee/: Cargo.toml
seabee/src/: cli.rs  config.rs  constants.rs  crypto.rs  enforce.rs  kernel_api.rs  lib.rs  lockdown.rs  seabeectl_lib.rs  unload_ebpf.rs  utils.rs
seabee/src/policy/: boot_load.rs  crypto_api.rs  fs_api.rs  mod.rs  policy_file.rs  runtime_update.rs
tests/: Cargo.toml  Makefile  ground_truth.toml  test_seabee.service
tests/configs/: sample_config.yaml  unverified_policy.yaml  verified_keys.yaml  verified_policy.yaml
tests/crypto/: README.md  gen_sigs.sh
tests/crypto/keys/: ecdsa-private.pem  ecdsa-public.pem  rsa-private.pem  rsa-public.pem
tests/crypto/keys/invalid/: dsa-private.pem  dsa-public.pem  fakekey
tests/kmod_example/: .gitignore  Makefile  hello_world_kmod.c
tests/kmod_test/: .gitignore  Makefile  test_kmod.c  test_kmod.h  test_kmod_user.c
tests/policies/: remove_sample_policy.yaml  remove_test_policy.yaml  remove_test_policy_v2.yaml  remove_test_tool_policy.yaml  sample_policy.yaml  shutdown_request.yaml  test_policy.yaml  test_policy_sha256.yaml  test_policy_v2.yaml  test_tool_debug_audit.yaml  test_tool_debug_block.yaml  test_tool_debug_policy.yaml  test_tool_overwrite.yaml  test_tool_release_audit.yaml  test_tool_release_block.yaml  test_tool_release_policy.yaml
tests/src/: command.rs  lib.rs  suite.rs  test_utils.rs
tests/src/functional/: maps.rs  mod.rs  pins.rs  seabeectl_local.rs  userspace.rs
tests/src/policy/: daemon_status.rs  mod.rs  protect_tool.rs  shared.rs  test_constants.rs  unverified_policy.rs  verified_keys.rs  verified_policy.rs
tests/src/security/: files.rs  kmod.rs  maps.rs  mod.rs  pins.rs  ptrace.rs  signal.rs  uprobe.rs
tests/src/state/: linux.rs  mod.rs  rust.rs
