[workspace]
members = [
    "bpf",
    "seabee",
    "tests"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
libbpf-rs = { version = "0.25.0-beta.1", default-features = false, features = ["vendored"] }
libtest-mimic = "0.7"
nix = "0.28"
procfs = { version = "0.17", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
toml = "0.8"
tracing = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

[workspace.package]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.79"
version = "1.1.0"
