[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.docs.dependencies]
mdx-truly-sane-lists = "^1.3"
mkdocs = "^1.6"
mkdocs-asciinema-player = "^0.10"
mkdocs-git-authors-plugin = "^0.9"
mkdocs-git-revision-date-localized-plugin = "^1.2"
mkdocs-material = "^9.5"
mkdocs-minify-plugin = "^0.8"
