[package]
name = "bpf"
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
libbpf-rs.workspace = true
nix = { workspace = true, features = ["fs", "signal"] }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
zerocopy.workspace = true
zerocopy-derive = "0.8"

[build-dependencies]
anyhow.workspace = true
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
doxygen-rs = "0.4"
libbpf-rs.workspace = true
libbpf-cargo = { version = "0.25.0-beta.1", default-features = false}
