[package]
name = "seabee"
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bpf = { path = "../bpf" }
clap = { version = "4.5", features = ["derive"] }
ctrlc.workspace = true
itertools = "0.14.0"
libbpf-rs.workspace = true
libc = "0.2"
nix = { workspace = true, features = ["signal", "user"] }
openssl = { version = "0.10", features = ["vendored"] }
rpassword = "7.3.1"
seccompiler = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json.workspace = true
serde_with = "3.14.0"
serde_yaml = "0.9" # this create is deprecated, but is still the best for the job it seems
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "registry"] }
zerocopy.workspace = true
